# app/models/user.js
@@ -11,7 +11,24 @@ const UserSchema = new mongoose.Schema({
   notifications: {type: [String], default: []},
   warned: {type: Boolean, default: false},
   blocked: {type: Boolean, default: false},
-  admin: {type: Boolean, default: false}
+  admin: {type: Boolean, default: false},
+  feedbacks: {
+    type: [{
+      text: { type: String, required: true },
+      date: {
+        type: String,
+        required: true,
+        default: () => {
+          const now = new Date();
+          const yyyy = now.getFullYear();
+          const mm = String(now.getMonth() + 1).padStart(2, '0');
+          const dd = String(now.getDate()).padStart(2, '0');
+          return `${yyyy}-${mm}-${dd}`;
+        }
+      }
+    }],
+    default: []
+  }
 });
 
 const User = mongoose.model('User', UserSchema);
